# cavalryModelEval

./: CMakeLists.txt  Untitled.ipynb  eval_cavalry.cpp  eval_sdk.cpp  main.cpp  mugshots_scores_full_model_cavalry_100_templates.csv  mugshots_scores_full_model_sdk_100_templates.csv
binaryImages/: .gitignore
